# katabasis

./: .env.example  .gitignore  Cargo.toml  README.md
.bruno/: bruno.json  (+2 more)
.old/: .gitignore  Cargo.toml
.old/elevator/: Cargo.toml
.old/elevator/src/: elevator.rs  main.rs  symlink.rs
.old/katabasis-app/: svelte.config.js
.old/katabasis-app/src/: app.css
.old/katabasis-cli/src/: main.rs  opt.rs
.old/manager/: Cargo.toml  targets.json  targets.schema.json
.old/manager-api/: Cargo.toml
.old/manager-api/src/: lib.rs
.old/manager-core/: Cargo.toml
.old/manager-core/.sqlx/: query-27b6cc75f817d3029d040016d8460469dc21ae6f0aa6696ff79f5b5bf8fd9c4d.json  query-3d5df951d994e00cc5cde8ae46fb850c708201630db6746da722840087dbb4c6.json  query-435a1b05a84524ff6a64f23a3646b2794ff1a26c23c99d24c06b2facb04a8d61.json  query-7c2d763ecde1c50e964be1dedde647188d08de9868d3bf45637b5e6bbbdb6beb.json  query-8c45426407770737bd4bd74c8edd2667f221d8043e3c14fd9e7e5c21d933759b.json  query-cc38fbdb6c6b8d93e1b36256e7ad6d802d1dd38db36cd8ce47cd6c847cc5106c.json  query-dfcc49459fb74a9fa73ff09518098f2760908beab02823358c2b8e4db3cab8f9.json  query-e0a5cb1cdfbe7586101edaa61309ac5df8acdcd7c65e2e535aa5e9eba1cb329a.json  query-f9cc4f4ec242d0d478f586c32e2509138fad1e3da691901df5618459efd86345.json
.old/manager-core/src/: lib.rs
.old/manager-implementations/src/: lib.rs
.old/manager/migrations/: 20250518005727_InitialMigration.sql
.old/manager/src/: database.rs  lib.rs  state.rs  targets.rs
.old/proto/: elevator.proto
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: lib.rs
cli/: Cargo.toml
cli/src/: logger.rs  main.rs
katabasis-app/src-tauri/: Cargo.toml  tauri-release.config.json  tauri.conf.json
katabasis-app/src-tauri/capabilities/: default.json
katabasis-app/src-tauri/src/: lib.rs
katabasis-cli/: Cargo.toml
katabasis-cli/src/: collection.rs  main.rs  opt.rs  runner.rs
katabasis/src-tauri/: Cargo.toml  tauri.conf.json
katabasis/src-tauri/capabilities/: default.json
katabasis/src-tauri/src/: lib.rs  logger.rs  main.rs
manager/: Cargo.toml  README.md  build.rs  targets.json
manager-core/: Cargo.toml
manager-core/.sqlx/: query-1023ef5e0b9ec1c6fd5090bf5a4e16236c84e05906e51147e14e39cafcefb131.json  query-3c396f31d1f6ddd8cf57e3e53cc71d3ca046bc24438010163158769d831ace4e.json  query-3dd01dda3945165a7e650d08b4f0ce7fb4ccbf91d41ff774c27e03bdc186167e.json  query-3e97a4a95aca3c27265f67de5c33464e008bfb391ad62df2dd2e467245d7bb22.json  query-46d2cb1091cb257053a54f8dbd54238eaa8cb971d92be14d11b63a51c505f10b.json  query-4aaf3692de1622a79095ad75d73fc0a19d2b5080ff2481e15225f200fccdac7b.json  query-5433a611c338717c12f76771969cdf74d4210bf0a0fa6857b1f8692ed58cb4c9.json  query-6a47b1939f0ea9965a0e324e7e45233face2bba11ee1418e74cfd269ca3b40a5.json  query-6ca2e1cc48482b8ba2822f340031db4279da496ed4c1ff8d233ac5933b21a349.json  query-91e3056ba84aac1ffad654d6871332ca039d4a8f4b957b6aeb6237845998cd11.json  query-9486b3c54ed8146a330b4f2874fcf27850653b780d974cc12a48a64058107f5e.json  query-9ecb3d16ef9541696e5f0a5f29d348950ea2a61fe563a12e4a417802131bf4e4.json  query-adcda6ceb92fe4a9ac992e4138934f6523e925cf753ed19b48c34f7346d80e04.json  query-b90e57bc7371dab509c6e4983bd9ca1331a65286a3a54e21c9b5067fedc27381.json  query-c843dacc94846177a1735eceab2eba9b012ab3ed9a05db207e2c4d3a493897f5.json  query-cb9f6dc2a48247f7eb82c2a9b3ff9ccedf8cd9470828a00bfd75125b7e7880d3.json  query-d377a3d11951374f3482dc6ad00fdfa489a6ee6d8f7513259163f0fb5384eeda.json  query-d898ee3710499065c4d290c4cf89baf10cb228c607c99691e357c43a54ed85d4.json  query-ed0388b01b06592cfbd91179417d42325acb15d1f05b8266aabce5da4fb1b142.json  query-f1db0eff104b5b80709247f37e6fb7bf0e8e03ef3c0986576c4ba669b583af69.json
manager-core/migrations/: 20250406163305_Initial.sql  20250408150030_ApplicationSettings.sql
manager-core/src/: error.rs
manager-core/src/data/: locator.rs  mod.rs  support.rs
manager-core/src/state/: directories.rs  mod.rs
manager-core/src/storage/: collection_repository.rs  mod.rs  plugin_repository.rs  settings_repository.rs
manager-core/src/utils/: fs.rs  mod.rs
manager-implementations/: Cargo.toml
manager-implementations/src/: lib.rs
manager-implementations/src/bepinex/: mod.rs
manager/.sqlx/: query-07e98fc47a21ec59a62313d5dc2d2d35fad33ca1e72cdc77f2e669c28766376e.json  query-083b2a661cc18c4c5c176ff4d4e43c6b11fd85a77e034b54c84bd5b00c9e1604.json  query-0d543e6a2920c91a73189a7738a68cf914f2c75ed660920d1558afe9ce8f59b0.json  query-133e07d265fc658b7ce41250f2c4349fe02415589f4cfb686d2066b12e0ca301.json  query-15827cb6b345232dfa7bbe9c95112446e8be7fab39b9d66e92915b3aeeec047b.json  query-21b24a8ff0c559b266f115bbcd45e2c36347dc41229b9d48f1425dd5f00a8404.json  query-29df9b1197868c122bb0c9ebf588deb0743200ad26364c7ca426e02aaed23f87.json  query-2f7205e7271f29b149bd9fd2c6774396a8173477fdb6ce6d2a926797e8035a0d.json  query-416d9fc9308afc8e597fee28600dde6487db4242ebfea315b0c938e1c71a0f09.json  query-545989a72dbb3be5fb8a8f8459aaed811f9332bc3862cbd267ac079e3680a767.json  query-5dba80cc103e3c10d5d286267063fcbaeb6b0d4346e417582500fba6e0498b0c.json  query-6aba2bdf837fd62db85c1b2c82dfe674c042c05231d1eb421ee25e71a672cd29.json  query-73f08f476afc81f072f217ce2827ac9dc329e0192caca3c9eefac15d2f8d6a7c.json  query-75d27f80f168576ff0510d1d7bc4f90b54a98383e3ec49f8d228337fd162390b.json  query-99cc7f0ec4e1b8972ddce91cfc7a53d894bce9e4f1f2a4b2045cab3e76a80e6b.json  query-b5ad83267bfc7e5fe7badedcf8a80b8e74304fe1ad1e309fce09f05073f8e42a.json  query-c357b8e127acd0f9f05a8fb43d03274f838a0c3cb994b97850af8c896099074e.json  query-ccc3d23529101c769fac287df83148a918e74c3baea9e9bfb32661d0fabadf60.json  query-d4b462eae719c5de95dd449dac54721b8c4c0932bc411eb83da762f35b33b4fb.json  query-d7b0ae795f67b7eb03ed039abdbd72b46cc90ac5c8a8d7c7c2d404cb1fe51b0f.json  query-dfa4226912e1c2c450f16693f302f711bce15733e556fcf68c447bc5c5bd9e80.json
manager/migrations/: 20241219212505_first.sql  20250604194409_Initial.sql
manager/src/: collection.rs  db.rs  error.rs  lib.rs  platforms.rs  state.rs  targets.rs
manager/src/api/: mod.rs
(+165 files in other folders)
