[workspace]
resolver = "2"
members = [
    "katabasis-app/src-tauri",
    "katabasis-cli",
    "manager",
    "elevator",
    "manager-core",
    "manager-implementations",
    "manager-api"
]

[profile.release]
strip = true # Remove Debug Symbols
lto = true # Enable Link to Optimisations
panic = "abort"
codegen-units = 1
opt-level = "s"

[profile.dev.package.sqlx-macros]
opt-level = 3

[workspace.dependencies]
tokio = "1.44.0"
tauri = { version = "2.4.1", features = [] }
chrono = { version = "0.4.40", features = ["serde"] }
serde_json = "1.0.140"
log = "0.4.27"
