[workspace]
resolver = "3"
members = ["manager"]

[profile.release]
opt-level = "s"
strip = true
lto = true
panic = "abort"

[profile.dev.package.sqlx-macros]
opt-level = 3

[workspace.dependencies]
tokio = "1.45.1"
reqwest = { version = "0.12.18", features = ["json", "stream"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "macros"] }

chrono = { version = "0.4.41", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
async-trait = "0.1.88"

eyre = "0.6.12"
tracing = "0.1.41"
tracing-error = "0.2.1"

dirs-next = "2.0.0"
