[workspace]
resolver = "3"
members = ["cli", "manager"]

[profile.release]
opt-level = "s"
strip = true
lto = true
panic = "abort"

[profile.dev.package.sqlx-macros]
opt-level = 3

[workspace.dependencies]
tokio = { version = "1.45.1", features = ["full"] }
futures = "0.3.31"
reqwest = { version = "0.12.18", features = ["json", "stream"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "macros"] }

chrono = { version = "0.4.41", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
strum = { version = "0.27", features = ["derive"] }

eyre = "0.6.12"
tracing = "0.1.41"
tracing-error = "0.2.1"
tracing-subscriber = "0.3.19"

dirs-next = "2.0.0"
zip = "4.1.0"
