[workspace]
resolver = "2"
members = [
    "katabasis-app/src-tauri",
    "katabasis-cli",
    "elevator",
    "manager-core",
    "manager-implementations",
    "manager-api",
    "manager"
]

[profile.release]
strip = true # Remove Debug Symbols
lto = true # Enable Link to Optimisations
panic = "abort"
codegen-units = 1
opt-level = "s"

[profile.dev.package.sqlx-macros]
opt-level = 3

[workspace.dependencies]
tokio = "1.45.0"
eyre = "0.6.12"
tauri = { version = "2.4.1", features = [] }
chrono = { version = "0.4.40", features = ["serde"] }
serde = { version = "1.0.216", features = ["derive"] }
uuid = { version = "1.16.0", features = ["v4"] }
serde_json = "1.0.140"
log = "0.4.27"
simplelog = "0.12.2"
