[package]
name = "cli"
version = "0.0.1"
edition = "2024"

[dependencies]
tokio = { workspace = true, features = ["rt-multi-thread"] }
eyre = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

clap = { version = "4.5.39", features = ["derive"] }

manager = { path = "../manager" }
