[package]
name = "katabasis-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true, features = ["full"] }
simplelog = { workspace = true }
clap = { version = "4.5.23", features = ["derive"] }
manager-api = { path = "../manager-api" }
manager-core = { path = "../manager-core" }
anyhow = "1.0.95"
