[package]
name = "manager-core"
version = "0.1.0"
edition = "2021"
description = ""

[dependencies]
tokio = { workspace = true, features = ["full"] }
log = { workspace = true }
chrono = { version = "0.4.40", features = ["serde"] }
thiserror = "2.0.11"
tracing = "0.1.41"
tracing-error = "0.2.1"
serde = { version = "1.0.216", features = ["derive"] }
sqlx = { version = "0.8", features = [ "runtime-tokio", "sqlite", "macros" ] }
dirs = "6.0.0"
dunce = "1.0.5"
