[package]
name = "manager-implementations"
version = "0.1.0"
edition = "2021"

[dependencies]
manager-core = { path = "../manager-core" }
tokio = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
async-trait = "0.1.88"
phf = { version = "0.11.3", features = ["phf_macros"] }
once_cell = "1.21.3"
regex = "1.11.1"
