[package]
name = "manager"
version = "0.0.1"
edition = "2024"

[dependencies]
tokio.workspace = true
futures.workspace = true
eyre.workspace = true
dirs-next.workspace = true
sqlx.workspace = true
tracing.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
strum.workspace = true
zip.workspace = true

bytes = { version = "1.10.1", features = ["serde"] }
steamlocate = "2.0.1"
regex = "1.11.1"
