[package]
name = "manager-core"
version = "0.1.0"
edition = "2021"
description = ""

[dependencies]
tokio = { workspace = true, features = ["full"] }
chrono = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
reqwest = { version = "0.12.15", features = ["json", "stream"]}
futures = "0.3"
bytes = { version = "1.10", features = ["serde"] }
thiserror = "2.0.11"
tracing = "0.1.41"
tracing-error = "0.2.1"
sqlx = { version = "0.8", features = [ "runtime-tokio", "sqlite", "macros" ] }
dirs = "6.0.0"
dunce = "1.0.5"
zip = "2.6.1"
steamlocate = "2.0.1"
strum = { version = "0.27", features = ["derive"] }
