[package]
name = "manager"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
eyre = { workspace = true }
tracing = "0.1"
tracing-error = "0.2"
sqlx = { version = "0.8", features = [ "runtime-tokio", "sqlite", "macros" ] }
reqwest = { version = "0.12", features = ["json", "stream"]}
dirs-next = "2"
