[package]
name = "katabasis-app"
version = "0.0.2"
description = "katabasis mod manager application"
authors = ["Jack Whatley"]
edition = "2021"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
manager = { path = "../../manager" }
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
